infrastructure/kube-prom-stack/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
  hostnames:
    - "grafana.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prom-stack-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
